--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -8,7 +8,8 @@
 
     <div class="main-content">
       <h1 title>Lista de Alumnos</h1>
-      <app-students-table></app-students-table>
+
+      <app-students></app-students>
     </div>
   </div>
 </mat-drawer-container>
