--- a/src/app/pages/main/components/sidenav/sidenav.component.html
+++ b/src/app/pages/main/components/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list>
   <h4>Platform Learning</h4>
   @for (item of listItems; track $index) {
-    <a mat-list-item href="{{ item.url }}">
+    <a mat-list-item [routerLink]="item.url">
       <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
       <span matListItemLine>{{ item.name }}</span>
     </a>
