--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -7,9 +7,7 @@
     <app-toolbar (toggleEvent)="drawer.toggle()"></app-toolbar>
 
     <div class="main-content">
-      <h1 title>Lista de Alumnos</h1>
-
-      <app-students></app-students>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </mat-drawer-container>
