--- a/src/app/shared/components/form-dialog/form-dialog.component.html
+++ b/src/app/shared/components/form-dialog/form-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ isEditing ? "Editar Alumno" : "Crear Alumno" }}</h2>
+<h2 mat-dialog-title>{{ isEditing ? "Editar" : "Crear" }}</h2>
 
 <mat-dialog-content>
   <form [formGroup]="createForm">
