--- a/src/app/features/dashboard/courses/components/table/table.component.html
+++ b/src/app/features/dashboard/courses/components/table/table.component.html
@@ -56,10 +56,9 @@
     <ng-container matColumnDef="isActive">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
       <td mat-cell *matCellDef="let row" [ngClass]="{ skeleton: isLoading }">
-        <mat-icon
-          [ngClass]="{ active: row.isActive, inactive: !row.isActive }"
-          >{{ row.isActive ? "check" : "close" }}</mat-icon
-        >
+        <mat-icon [ngClass]="{ active: row.isActive, inactive: !row.isActive }">
+          {{ row.isActive ? "check" : "close" }}
+        </mat-icon>
       </td>
     </ng-container>
 
@@ -101,6 +100,14 @@
         >
           <mat-icon>delete</mat-icon>
         </button>
+        <a
+          mat-icon-button
+          color="primary"
+          [disabled]="isLoading"
+          [routerLink]="row.id"
+        >
+          <mat-icon>visibility</mat-icon>
+        </a>
       </td>
     </ng-container>
 
