--- a/src/app/features/dashboard/courses/components/form-dialog/form-dialog.component.html
+++ b/src/app/features/dashboard/courses/components/form-dialog/form-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ isEditing ? "Editar Alumno" : "Crear Alumno" }}</h2>
+<h2 mat-dialog-title>{{ isEditing ? "Editar Curso" : "Crear Curso" }}</h2>
 
 <mat-dialog-content ngClass="{ skeleton: isLoading }">
   <mat-spinner *ngIf="isLoading"></mat-spinner>
