--- a/src/app/features/dashboard/courses/components/form-dialog/form-dialog.component.scss
+++ b/src/app/features/dashboard/courses/components/form-dialog/form-dialog.component.scss
@@ -8,3 +8,16 @@
   justify-content: center;
   align-items: center;
 }
+
+mat-dialog-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+}
+
+mat-spinner {
+  width: 100%;
+}
