--- a/src/app/features/dashboard/inscriptions/components/form/form.component.html
+++ b/src/app/features/dashboard/inscriptions/components/form/form.component.html
@@ -1,7 +1,9 @@
 <h2 mat-dialog-title>{{ isEditing ? "Editar Alumno" : "Crear Alumno" }}</h2>
 
 <mat-dialog-content ngClass="{ skeleton: isLoading }">
-  <form [formGroup]="createForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+
+  <form [formGroup]="createForm" *ngIf="!isLoading">
     <mat-form-field class="w-full">
       <mat-label>Curso</mat-label>
       <mat-select name="course" formControlName="courseId">
