[ADD] Auth Functional

--- a/src/app/features/dashboard/components/sidenav/sidenav.component.html
+++ b/src/app/features/dashboard/components/sidenav/sidenav.component.html
@@ -6,4 +6,8 @@
       <span matListItemLine>{{ item.name }}</span>
     </a>
   }
+  <a mat-list-item (click)="logout()">
+    <mat-icon matListItemIcon>logout</mat-icon>
+    <span matListItemLine>Logout</span>
+  </a>
 </mat-nav-list>
