--- a/src/app/features/dashboard/courses/components/table/table.component.html
+++ b/src/app/features/dashboard/courses/components/table/table.component.html
@@ -53,12 +53,16 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="isActive">
+    <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
       <td mat-cell *matCellDef="let row" [ngClass]="{ skeleton: isLoading }">
-        <mat-icon [ngClass]="{ active: row.isActive, inactive: !row.isActive }">
-          {{ row.isActive ? "check" : "close" }}
-        </mat-icon>
+        <span
+          class="badge"
+          appStatus="{{ row.status }}"
+          style="padding: 5px 10px"
+        >
+          {{ row.status | status }}
+        </span>
       </td>
     </ng-container>
 
