--- a/src/app/features/dashboard/inscriptions/components/table/table.component.html
+++ b/src/app/features/dashboard/inscriptions/components/table/table.component.html
@@ -35,21 +35,27 @@
     <ng-container matColumnDef="course">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Curso</th>
       <td mat-cell *matCellDef="let row" [ngClass]="{ skeleton: isLoading }">
-        {{ row.courseId }}
+        {{ row.course.title }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="student">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Alumno</th>
       <td mat-cell *matCellDef="let row" [ngClass]="{ skeleton: isLoading }">
-        {{ row.studentId }}
+        {{ row.student.firstName }} {{ row.student.lastName }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
       <td mat-cell *matCellDef="let row" [ngClass]="{ skeleton: isLoading }">
-        {{ row.status }}
+        <span
+          class="badge"
+          appStatus="{{ row.status }}"
+          style="padding: 5px 10px"
+        >
+          {{ row.status | status }}
+        </span>
       </td>
     </ng-container>
 
