--- a/src/app/features/dashboard/courses/pages/details/detail.component.html
+++ b/src/app/features/dashboard/courses/pages/details/detail.component.html
@@ -58,5 +58,9 @@
     </small>
   </div>
 
-  <app-inscriptions-table [courseId]="course?.id"></app-inscriptions-table>
+  <div class="inscriptions">
+    <h3>Inscripciones</h3>
+
+    <app-inscriptions-table [courseId]="course?.id"></app-inscriptions-table>
+  </div>
 </div>
