--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
+<lib-toastify-toast-container></lib-toastify-toast-container>
+
 <mat-drawer-container class="drawer-container" autosize>
   <mat-drawer #drawer class="sidenav" mode="over">
     <app-sidenav></app-sidenav>
