--- a/src/app/features/dashboard/teachers/components/table/table.component.scss
+++ b/src/app/features/dashboard/teachers/components/table/table.component.scss
@@ -11,6 +11,11 @@
   height: 100%;
 }
 
+.table-container {
+  overflow-x: auto;
+  width: 100%;
+}
+
 .badge {
   display: inline-block;
   padding: 5px 10px;
