--- a/src/app/features/dashboard/courses/components/table/table.component.scss
+++ b/src/app/features/dashboard/courses/components/table/table.component.scss
@@ -12,6 +12,11 @@
   align-items: center;
 }
 
+.table-container {
+  overflow-x: auto;
+  width: 100%;
+}
+
 .spinner-container {
   display: flex;
   justify-content: center;
