--- a/src/app/features/dashboard/inscriptions/inscriptions.component.html
+++ b/src/app/features/dashboard/inscriptions/inscriptions.component.html
@@ -1,3 +1,5 @@
 <h2>Inscripciones</h2>
 
+<!-- <app-inscriptions-table></app-inscriptions-table> -->
+
 <app-inscriptions-table></app-inscriptions-table>
