[ADD] Students Complete

--- a/src/app/features/dashboard/students/components/table/table.component.html
+++ b/src/app/features/dashboard/students/components/table/table.component.html
@@ -103,6 +103,9 @@
           >
             <mat-icon>delete</mat-icon>
           </button>
+          <a mat-icon-button color="primary" [routerLink]="row.id">
+            <mat-icon>visibility</mat-icon>
+          </a>
         </td>
       </ng-container>
 
