--- a/src/app/features/dashboard/courses/components/table/table.component.html
+++ b/src/app/features/dashboard/courses/components/table/table.component.html
@@ -23,123 +23,113 @@
 </div>
 
 <div class="mat-elevation-z8 table-container">
-  @if (isLoading$ | async) {
-    <div class="skeleton-container">
-      <div class="skeleton-text" *ngFor="let row of skeletonRows">
-        <ngx-skeleton-loader [theme]="{ height: '16px' }"></ngx-skeleton-loader>
-      </div>
-    </div>
-  } @else {
-    <table mat-table [dataSource]="dataSource" matSort>
-      <!-- ID Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.id }}
-        </td>
-      </ng-container>
+  <table mat-table [dataSource]="dataSource" matSort>
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.id }}
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.title }}
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.title }}
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="beginDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Fecha de Inicio
-        </th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.beginDate | date: "dd/MM/yyyy HH:mm" }}
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="beginDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de Inicio</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.beginDate | date: "dd/MM/yyyy HH:mm" }}
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="endDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de Fin</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.endDate | date: "dd/MM/yyyy HH:mm" }}
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="endDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de Fin</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.endDate | date: "dd/MM/yyyy HH:mm" }}
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
-        <td mat-cell *matCellDef="let row">
-          <span
-            class="badge"
-            appStatus="{{ row.status }}"
-            style="padding: 5px 10px"
-          >
-            {{ row.status | status }}
-          </span>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
+      <td mat-cell *matCellDef="let row">
+        <span
+          class="badge"
+          appStatus="{{ row.status }}"
+          style="padding: 5px 10px"
+        >
+          {{ row.status | status }}
+        </span>
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Fecha de Creación
-        </th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.createdAt | date: "dd/MM/yyyy HH:mm" }}
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Fecha de Creación
+      </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.createdAt | date: "dd/MM/yyyy HH:mm" }}
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="updatedAt">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Fecha de Actualización
-        </th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.updatedAt | date: "dd/MM/yyyy HH:mm" }}
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="updatedAt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Fecha de Actualización
+      </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.updatedAt | date: "dd/MM/yyyy HH:mm" }}
+      </td>
+    </ng-container>
 
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Acciones</th>
-        <td mat-cell *matCellDef="let row">
-          @if (!id) {
-            <button
-              mat-icon-button
-              color="primary"
-              [disabled]="isLoading$ | async"
-              (click)="editCourse(row)"
-            >
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button
-              mat-icon-button
-              color="primary"
-              [disabled]="isLoading$ | async"
-              (click)="deleteCourse(row.id)"
-            >
-              <mat-icon>delete</mat-icon>
-            </button>
-          }
-          <a
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Acciones</th>
+      <td mat-cell *matCellDef="let row">
+        @if (!id) {
+          <button
             mat-icon-button
             color="primary"
             [disabled]="isLoading$ | async"
-            [routerLink]="row.id"
+            (click)="editCourse(row)"
           >
-            <mat-icon>visibility</mat-icon>
-          </a>
-        </td>
-      </ng-container>
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            color="primary"
+            [disabled]="isLoading$ | async"
+            (click)="deleteCourse(row.id)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        }
+        <a
+          mat-icon-button
+          color="primary"
+          [disabled]="isLoading$ | async"
+          [routerLink]="row.id"
+        >
+          <mat-icon>visibility</mat-icon>
+        </a>
+      </td>
+    </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4" *ngIf="!(isLoading$ | async)">
-          No data matching the filter "{{ input.value }}"
-        </td>
-      </tr>
-    </table>
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4" *ngIf="!(isLoading$ | async)">
+        No data matching the filter "{{ input.value }}"
+      </td>
+    </tr>
+  </table>
 
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      aria-label="Select page of users"
-    ></mat-paginator>
-  }
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    aria-label="Select page of users"
+  ></mat-paginator>
 </div>
