--- a/src/app/features/dashboard/teachers/pages/details/details.component.html
+++ b/src/app/features/dashboard/teachers/pages/details/details.component.html
@@ -45,6 +45,7 @@
     <app-courses-table
       [id]="teacher?.id"
       [type]="'teacher'"
+      [showHeader]="false"
     ></app-courses-table>
   </div>
 </div>
