--- a/src/app/features/dashboard/users/components/table/table.component.html
+++ b/src/app/features/dashboard/users/components/table/table.component.html
@@ -6,23 +6,23 @@
       (keyup)="applyFilter($event)"
       placeholder="Pedro, Juan, Maria..."
       #input
-      [disabled]="isLoading$ | async"
     />
   </mat-form-field>
 
-  @if (showHeader) {
-    <button
-      mat-mini-fab
-      color="primary"
-      (click)="openForm()"
-      [disabled]="isLoading$ | async"
-    >
+  @if (createButton) {
+    <button mat-mini-fab color="primary">
       <mat-icon>add</mat-icon>
     </button>
   }
 </div>
 
 <div class="mat-elevation-z8 table-container">
+  <!-- <div class="skeleton-container"> -->
+  <!--   <div class="skeleton-text" *ngFor="let row of skeletonRows"> -->
+  <!--     <ngx-skeleton-loader [theme]="{ height: '16px' }"></ngx-skeleton-loader> -->
+  <!--   </div> -->
+  <!-- </div> -->
+
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- ID Column -->
     <ng-container matColumnDef="id">
@@ -32,24 +32,10 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
       <td mat-cell *matCellDef="let row">
-        {{ row.title }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="beginDate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de Inicio</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.beginDate | date: "dd/MM/yyyy HH:mm" }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="endDate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de Fin</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.endDate | date: "dd/MM/yyyy HH:mm" }}
+        {{ row.email }}
       </td>
     </ng-container>
 
@@ -62,6 +48,19 @@
           style="padding: 5px 10px"
         >
           {{ row.status | status }}
+        </span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
+      <td mat-cell *matCellDef="let row">
+        <span
+          class="badge"
+          appStatus="{{ row.status }}"
+          style="padding: 5px 10px"
+        >
+          {{ row.role | status }}
         </span>
       </td>
     </ng-container>
@@ -88,32 +87,30 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let row">
-        @if (!id) {
-          <button
-            mat-icon-button
-            color="primary"
-            [disabled]="isLoading$ | async"
-            (click)="editCourse(row)"
-          >
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button
-            mat-icon-button
-            color="primary"
-            [disabled]="isLoading$ | async"
-            (click)="deleteCourse(row.id)"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-        }
-        <a
-          mat-icon-button
-          color="primary"
-          [disabled]="isLoading$ | async"
-          [routerLink]="row.id"
-        >
-          <mat-icon>visibility</mat-icon>
-        </a>
+        <!-- <button -->
+        <!--   mat-icon-button -->
+        <!--   color="primary" -->
+        <!--   (click)="editStudent(row)" -->
+        <!--   [disabled]="isLoading$ | async" -->
+        <!-- > -->
+        <!--   <mat-icon>edit</mat-icon> -->
+        <!-- </button> -->
+        <!-- <button -->
+        <!--   mat-icon-button -->
+        <!--   color="primary" -->
+        <!--   (click)="deleteStudent(row.id)" -->
+        <!--   [disabled]="isLoading$ | async" -->
+        <!-- > -->
+        <!--   <mat-icon>delete</mat-icon> -->
+        <!-- </button> -->
+        <!-- <button -->
+        <!--   mat-icon-button -->
+        <!--   color="primary" -->
+        <!--   [disabled]="isLoading$ | async" -->
+        <!--   [routerLink]="row.id" -->
+        <!-- > -->
+        <!--   <mat-icon>visibility</mat-icon> -->
+        <!-- </button> -->
       </td>
     </ng-container>
 
