--- a/src/app/features/dashboard/users/components/table/table.component.html
+++ b/src/app/features/dashboard/users/components/table/table.component.html
@@ -10,7 +10,12 @@
   </mat-form-field>
 
   @if (createButton) {
-    <button mat-mini-fab color="primary">
+    <button
+      mat-mini-fab
+      color="primary"
+      (click)="openForm()"
+      [disabled]="isLoading$ | async"
+    >
       <mat-icon>add</mat-icon>
     </button>
   }
@@ -57,7 +62,7 @@
       <td mat-cell *matCellDef="let row">
         <span
           class="badge"
-          appStatus="{{ row.status }}"
+          appStatus="{{ row.role }}"
           style="padding: 5px 10px"
         >
           {{ row.role | status }}
@@ -87,30 +92,22 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let row">
-        <!-- <button -->
-        <!--   mat-icon-button -->
-        <!--   color="primary" -->
-        <!--   (click)="editStudent(row)" -->
-        <!--   [disabled]="isLoading$ | async" -->
-        <!-- > -->
-        <!--   <mat-icon>edit</mat-icon> -->
-        <!-- </button> -->
-        <!-- <button -->
-        <!--   mat-icon-button -->
-        <!--   color="primary" -->
-        <!--   (click)="deleteStudent(row.id)" -->
-        <!--   [disabled]="isLoading$ | async" -->
-        <!-- > -->
-        <!--   <mat-icon>delete</mat-icon> -->
-        <!-- </button> -->
-        <!-- <button -->
-        <!--   mat-icon-button -->
-        <!--   color="primary" -->
-        <!--   [disabled]="isLoading$ | async" -->
-        <!--   [routerLink]="row.id" -->
-        <!-- > -->
-        <!--   <mat-icon>visibility</mat-icon> -->
-        <!-- </button> -->
+        <button
+          mat-icon-button
+          color="primary"
+          (click)="editStudent(row)"
+          [disabled]="isLoading$ | async"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          color="primary"
+          (click)="deleteStudent(row.id)"
+          [disabled]="isLoading$ | async"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </ng-container>
 
