--- a/src/app/features/dashboard/courses/components/table/table.component.html
+++ b/src/app/features/dashboard/courses/components/table/table.component.html
@@ -22,7 +22,13 @@
   }
 </div>
 
-<div class="mat-elevation-z8 table-container">
+<div *ngIf="isLoading$ | async">
+  <div class="skeleton-container">
+    <div class="skeleton"></div>
+  </div>
+</div>
+
+<div class="mat-elevation-z8 table-container" *ngIf="!(isLoading$ | async)">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- ID Column -->
     <ng-container matColumnDef="id">
