--- a/src/app/features/dashboard/inscriptions/components/table/table.component.html
+++ b/src/app/features/dashboard/inscriptions/components/table/table.component.html
@@ -11,7 +11,13 @@
   }
 </div>
 
-<div class="mat-elevation-z8 table-container">
+<div *ngIf="isLoading$ | async">
+  <div class="skeleton-container">
+    <div class="skeleton"></div>
+  </div>
+</div>
+
+<div class="mat-elevation-z8 table-container" *ngIf="!(isLoading$ | async)">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- ID Column -->
     <ng-container matColumnDef="id">
@@ -22,14 +28,14 @@
     </ng-container>
 
     <ng-container matColumnDef="courseId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Curso</th>
+      <th mat-header-cell *matHeaderCellDef>Curso</th>
       <td mat-cell *matCellDef="let row">
         {{ row.course.title }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="studentId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Alumno</th>
+      <th mat-header-cell *matHeaderCellDef>Alumno</th>
       <td mat-cell *matCellDef="let row">
         {{ row.student.firstName }} {{ row.student.lastName }}
       </td>
