--- a/src/app/features/dashboard/students/components/table/table.component.scss
+++ b/src/app/features/dashboard/students/components/table/table.component.scss
@@ -25,21 +25,20 @@
 }
 
 .skeleton {
-  background-color: #f0f0f0;
-  animation: skeleton-loading 1s linear infinite alternate;
+  animation: skeleton-loading 0.3s linear infinite alternate;
+  height: 400px;
+  border-radius: 5px;
 }
 
 @keyframes skeleton-loading {
   0% {
-    background-color: #ddd;
+    background-color: #aaa;
   }
   100% {
-    background-color: #f2f2f2;
+    background-color: #fff;
   }
 }
 
 .skeleton-container {
   margin-top: 16px; /* Ajusta el espacio según sea necesario */
-  padding: 0 20px;
-  height: 100%;
 }
